# agenthive

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  verify_setup.py
.kiro/hooks/: format-lint-typecheck.kiro.hook
agent_configs/: devops_engineer.json  full_stack_engineer.json  product_designer.json  qa_engineer.json
agent_hive/: __init__.py
agent_hive/agents/: README.md  __init__.py  factory.py
agent_hive/api/: README.md  __init__.py  agents.py  chat.py  core.py  files.py  health.py  main.py  sessions.py  validation.py
agent_hive/core/: __init__.py  config.py  graphs.py  models.py  multimodal.py  multimodal_integration.py  state.py  vision.py
agent_hive/integrations/: README.md  __init__.py  composio_client.py  composio_sdk.py  mcp.py  unified_client.py
examples/: README_DEMO.md  agent_factory_demo.py  api_gateway_demo.py  composio_full_integration_demo.py  direct_chat_demo.py  mcp_config_example.json  mcp_integration_demo.py  model_abstraction_demo.py  multimodal_demo.py  orchestrator_demo.py  setup_demo_env.py  state_management_demo.py
tests/: __init__.py  test_agent_factory.py  test_api_integration.py  test_composio_sdk_integration.py  test_direct_chat_graphs.py  test_foundation.py  test_integration_direct_chat.py  test_mcp_integration.py  test_models.py  test_multimodal.py  test_multimodal_integration.py  test_orchestrator_full_workflow.py  test_orchestrator_graph.py  test_orchestrator_integration.py  test_specialized_agents.py  test_state_integration.py  test_state_management.py  test_vision.py
(+3 files in other folders)
